# mne-tools

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  check_environment.py  check_lockfile.py  check_old_environment.py  check_old_lockfile.py  generate_citation.py  generate_codemeta.py  helpers.py  pyproject.toml  sync_dependencies_to_environment_file.py  sync_dependencies_to_readme.py
.circleci/: config.yml
.github/workflows/: automerge.yml  sync-teams.yaml  tool-tests.yml
actions/check-environment/: action.yml
actions/check-lockfile/: action.yml
actions/check-qt-import/: action.yml
actions/generate-citation/: action.yml
actions/generate-codemeta/: action.yml
actions/setup-xvfb/: action.yml
actions/sync-dependencies-to-environment-file/: action.yml
actions/sync-dependencies-to-readme/: action.yml
actions/sync_dependencies_to_environment_file/: action.yml
admin/: teams.yaml  validate-teams-yaml.py
src/mne_tools/: check_environment.py  check_lockfile.py  generate_citation.py  generate_codemeta.py  helpers.py  sync_dependencies_to_environment_file.py  sync_dependencies_to_readme.py
