[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling >= 1.27"]

[dependency-groups]
test = [
  "codespell",
  "pre-commit",
  "pytest >= 8.0",
  "pytest-cov >= 4.1"
]

[project]
dependencies = [
  "tomlkit",
  "pyyaml"
]
description = "Shared tooling for the MNE-Tools org."
name = "mne-tools"
version = "0.1.0"
requires-python = ">= 3.10"

[tool.hatch.build]
include = ["/.*"]